--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.18.1/babel.min.js"></script>
   </body>
 </html>
